hotfix(notification-settings): map settings list from api to static list in first rendering

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -323,5 +323,24 @@
   "ERROR.AUTH.NOT_MATCHED": "username or password not matched",
   "ERROR.AUTH.DUPLICATE_KEY": "email is already exists",
   "ERROR.FORGET_PASSWORD.NOT_MATCHED": "user not found",
-  "OTP_SENT_SUCCESS": "OTP has been successfully sent to your email"
+  "OTP_SENT_SUCCESS": "OTP has been successfully sent to your email",
+  "ACCEPT_CONNECT": "Connection accepted",
+  "APPLICATION": "New application",
+  "APPROVED": "Offer response",
+  "ASSIGNEE_CANCELED": "Job canceled by talent",
+  "ASSIGNER_CANCELED": "Job canceled by organization",
+  "ASSIGNER_CONFIRMED": "Ended hire",
+  "CHAT": "Chat messages",
+  "COMMENT": "Commented on your post",
+  "COMMENT_LIKE": "Liked your comment",
+  "CONNECT": "Connection request",
+  "FOLLOWED": "New follower",
+  "HIRED": "Hired",
+  "MEMBERED": "Added to organization",
+  "OFFER": "New offer",
+  "POST_LIKE": "Liked your post",
+  "PROJECT_COMPLETE": "Completed job",
+  "SHARE_POST": "Shared your post",
+  "SHARE_PROJECT": "Shared your job",
+  "REJECT": "Application rejected"
 }
